# libbsarch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: config.cmake.in  libbsarch-config.cmake.in
cpp_lib/: CMakeLists.txt  libbsarch.vcxproj  libbsarch.vcxproj.filters
delphi/: libbsarch.dpr  libbsarch.dproj  wbBSArchive.pas
delphi_lib/: .gitignore  CMakeLists.txt  libbsarch.dpr  libbsarch.dproj  wbBSArchive.pas
examples/: CmakeLists.txt  libbsarch-read-write.sln  libbsarch-read-write.vcxproj  libbsarch-read-write.vcxproj.filters  libbsarch-visualstudio-test.cpp  libbsarch-visualstudio-test.sln
include/libbsarch/: libbsarch.h
src/: base_types.cpp  base_types.hpp  bs_archive.cpp  bs_archive.h  bs_archive_entries.cpp  bsa.cpp  bsa.hpp  bsa_entry_list.hpp  bsa_saver.cpp  bsa_saver.hpp  dds.h  libbsarch.c  libbsarch.cpp  libbsarch.def  libbsarch.h  libbsarch.hpp  transform_archive.cpp  transform_archive.hpp
src/utils/: convertible_string.cpp  convertible_string.hpp  scope_fail.hpp  string_convert.cpp  string_convert.hpp
tests/: Utils.hpp  main.test.cpp  save_and_load.test.cpp  transform_archive.test.cpp  utils.cpp
